--- a/app/src/main/res/layout/activity_daily_summary.xml
+++ b/app/src/main/res/layout/activity_daily_summary.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/backgroundColor"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:background="@drawable/border"
         android:id="@+id/dailySummaryDate"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:text="@string/date"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:textColor="#000000" />
+        android:textColor="@color/fontColor" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             android:text="@string/expense_total"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:textColor="#000000" />
+            android:textColor="@color/fontColor" />
 
         <TextView
             android:gravity="center_vertical"
@@ -39,7 +39,7 @@
             android:layout_height="match_parent"
             android:text="@string/amount"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:textColor="#000000" />
+            android:textColor="@color/fontColor" />
 
     </LinearLayout>
 
@@ -57,7 +57,7 @@
             android:layout_height="match_parent"
             android:text="@string/income_total"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:textColor="#000000" />
+            android:textColor="@color/fontColor" />
 
         <TextView
             android:gravity="center_vertical"
@@ -66,7 +66,7 @@
             android:layout_height="match_parent"
             android:text="@string/amount"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:textColor="#000000" />
+            android:textColor="@color/fontColor" />
 
     </LinearLayout>
 
@@ -84,7 +84,7 @@
             android:layout_height="match_parent"
             android:text="@string/total"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:textColor="#000000" />
+            android:textColor="@color/fontColor" />
 
         <TextView
             android:gravity="center_vertical"
@@ -93,7 +93,7 @@
             android:layout_height="match_parent"
             android:text="@string/amount"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:textColor="#000000" />
+            android:textColor="@color/fontColor" />
 
     </LinearLayout>
 
@@ -104,29 +104,22 @@
         android:orientation="horizontal">
 
         <TextView
-            android:textColor="#000000"
+            android:id="@+id/expenseIncomeDailySummary"
+            android:textColor="@color/fontColor"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="4"
+            android:layout_weight="5"
             android:gravity="center"
             android:text="@string/expense_or_income"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:text="@string/type"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:textColor="#000000" />
+
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="@color/fontColor"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="5"
             android:gravity="center"
             android:text="@string/amount_dollar_sign"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
