--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -31,7 +31,6 @@
             android:layout_height="wrap_content"
             android:textColor="@color/fontColor"
             android:text="@string/date" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -55,11 +54,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:entries="@array/list_category"
+            android:entries="@array/list_expense_category"
             android:gravity="center"
-            android:prompt="@string/category_prompt"
             android:scrollbarSize="30dp"></Spinner>
-
     </LinearLayout>
 
     <LinearLayout
@@ -79,15 +76,13 @@
             android:textColor="@color/fontColor" />
 
         <Spinner
-            android:id="@+id/typeExpenseSpinner"
+            android:id="@+id/paymentMethodExpenseSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:entries="@array/list_category"
+            android:entries="@array/list_payment_method"
             android:gravity="center"
-            android:prompt="@string/category_prompt"
             android:scrollbarSize="30dp"></Spinner>
-
     </LinearLayout>
 
     <LinearLayout
@@ -125,6 +120,7 @@
 
             <EditText
                 android:id="@+id/amountExpenseEditView"
+                android:backgroundTint="@color/fontColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -133,36 +129,39 @@
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:textColor="@color/fontColor"
                 android:textColorHint="@color/fontColor" />
-
         </LinearLayout>
-
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="20"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_weight="15"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/notesExpenseTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/notes"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textColor="@color/fontColor" />
+            android:layout_weight="10"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center" />
 
         <EditText
-            android:id="@+id/notesExpenseEditTextView"
-            android:layout_width="wrap_content"
+            android:id="@+id/notesExpenseEditText"
+            android:backgroundTint="@color/fontColor"
+            android:hint="@string/notes"
+            android:focusable="false"
+            android:layout_weight="10"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:prompt="@string/category_prompt"
-            android:scrollbarSize="30dp" />
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textColor="@color/fontColor"
+            android:textColorHint="@color/fontColor"
+            android:gravity="center|bottom" />
 
+        <TextView
+            android:layout_weight="10"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center" />
     </LinearLayout>
 
 
@@ -194,7 +193,6 @@
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@drawable/nav_item_color_state"
         app:itemTextColor="@drawable/nav_item_color_state"
-        app:menu="@menu/bottom_navigation_bar"
-        />
+        app:menu="@menu/bottom_navigation_bar" />
 
 </LinearLayout>
