--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/type"
+            android:text="@string/category"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textColor="@color/fontColor" />
 
