--- a/app/src/main/res/layout/activity_weekly_summary.xml
+++ b/app/src/main/res/layout/activity_weekly_summary.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/backgroundColor"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:textColor="#000000"
+        android:textColor="@color/fontColor"
         android:id="@+id/weekWeeklySummary"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -21,14 +24,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="@color/fontColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/expense_total"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="@color/fontColor"
             android:id="@+id/expenseAmountWeeklySummary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,14 +49,14 @@
         android:layout_height="0dp">
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="@color/fontColor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/income_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="@color/fontColor"
             android:id="@+id/incomeAmountWeeklySummary"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
@@ -71,14 +74,14 @@
         android:layout_height="0dp">
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="@color/fontColor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="@color/fontColor"
             android:id="@+id/netAmountWeeklySummary"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
@@ -95,7 +98,7 @@
         android:layout_height="0dp">
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="@color/fontColor"
             android:id="@+id/textView3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -105,7 +108,7 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="@color/fontColor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:gravity="center"
             android:layout_weight="35"
@@ -114,7 +117,7 @@
             android:layout_height="match_parent" />
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="@color/fontColor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:gravity="center"
             android:layout_weight="35"
