--- a/app/src/main/res/layout/listview_monthly_summary.xml
+++ b/app/src/main/res/layout/listview_monthly_summary.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/backgroundColor"
     android:padding="5dp"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
-        android:textColor="#000000"
+        android:textColor="@color/fontColor"
         android:id="@+id/weekMonthlyListView"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:gravity="center"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:text="@string/week"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
 
     <TextView
-        android:textColor="#000000"
+        android:textColor="@color/fontColor"
         android:id="@+id/incomeMonthlyListView"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:gravity="center"
-        android:layout_weight="4"
+        android:layout_weight="3.5"
         android:text="@string/view_income"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
 
     <TextView
-        android:textColor="#000000"
+        android:textColor="@color/fontColor"
         android:id="@+id/expenseMonthlyListView"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:gravity="center"
-        android:layout_weight="4"
+        android:layout_weight="3.5"
         android:text="@string/view_expense"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
