--- a/app/src/main/res/layout/listview_weekly_summary.xml
+++ b/app/src/main/res/layout/listview_weekly_summary.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/backgroundColor"
     android:padding="5dp"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
-        android:textColor="#000000"
+        android:textColor="@color/fontColor"
         android:id="@+id/dayWeeklyListView"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -17,7 +18,7 @@
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     <TextView
-        android:textColor="#000000"
+        android:textColor="@color/fontColor"
         android:id="@+id/incomeWeeklyListView"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:gravity="center"
@@ -27,7 +28,7 @@
         android:layout_height="match_parent" />
 
     <TextView
-        android:textColor="#000000"
+        android:textColor="@color/fontColor"
         android:id="@+id/expenseWeeklyListView"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:gravity="center"
