--- a/app/src/main/res/layout/activity_expense_income.xml
+++ b/app/src/main/res/layout/activity_expense_income.xml
@@ -2,12 +2,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/backgroundColor"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.mingkie.simplepocketaccount.MainActivities.ExpenseActivity">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +15,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/selectDateExpenseTextView"
+            android:id="@+id/selectDate"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,7 +23,7 @@
             android:text="@string/select_date" />
 
         <TextView
-            android:id="@+id/dateExpenseTextView"
+            android:id="@+id/dateTextView"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,7 +39,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/categoryExpenseTextView"
+            android:id="@+id/categoryTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -50,11 +48,10 @@
             android:textColor="@color/fontColor" />
 
         <Spinner
-            android:id="@+id/categoryExpenseSpinner"
+            android:id="@+id/categorySpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:entries="@array/list_expense_category"
             android:gravity="center"
             android:scrollbarSize="30dp"></Spinner>
     </LinearLayout>
@@ -67,7 +64,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/paymentMethodExpenseTextView"
+            android:id="@+id/paymentMethodTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -76,11 +73,10 @@
             android:textColor="@color/fontColor" />
 
         <Spinner
-            android:id="@+id/paymentMethodExpenseSpinner"
+            android:id="@+id/paymentMethodSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:entries="@array/list_payment_method"
             android:gravity="center"
             android:scrollbarSize="30dp"></Spinner>
     </LinearLayout>
@@ -92,7 +88,7 @@
         android:layout_height="0dp">
 
         <TextView
-            android:id="@+id/expenseWarning"
+            android:id="@+id/warningTextView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="30"
@@ -110,7 +106,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/dollarSignExpenseTextView"
+                android:id="@+id/dollarSignTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -119,7 +115,7 @@
                 android:textColor="@color/fontColor" />
 
             <EditText
-                android:id="@+id/amountExpenseEditView"
+                android:id="@+id/amountEditView"
                 android:backgroundTint="@color/fontColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -145,7 +141,7 @@
             android:gravity="center" />
 
         <EditText
-            android:id="@+id/notesExpenseEditText"
+            android:id="@+id/notesEditText"
             android:backgroundTint="@color/fontColor"
             android:hint="@string/notes"
             android:focusable="false"
@@ -164,7 +160,6 @@
             android:gravity="center" />
     </LinearLayout>
 
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -172,7 +167,7 @@
         android:gravity="center" />
 
     <Button
-        android:id="@+id/submitExpenseButton"
+        android:id="@+id/submitButton"
         android:layout_weight="6"
         android:layout_gravity="center"
         android:text="@string/submit_button"
@@ -187,12 +182,11 @@
         android:layout_height="0dp" />
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/expenseBottomNavigation"
+        android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@drawable/nav_item_color_state"
         app:itemTextColor="@drawable/nav_item_color_state"
         app:menu="@menu/bottom_navigation_bar" />
-
 </LinearLayout>
